# AUTM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/src/: App.cpp  CellularAutomata.cpp  CellularAutomata.h  CustomShader.cpp  CustomShader.h  DemoLayer.cpp  DemoLayer.h  EntityLayer.cpp  EntityLayer.h  Mandelbrot.cpp  Mandelbrot.h  PhysicsLayer.cpp  PhysicsLayer.h  RayMarching.cpp  RayMarching.h  SlimeMoldSimulation.cpp  SlimeMoldSimulation.h  main.cpp
App/src/CellularAutomata/: CellularAutomata.cpp  CellularAutomata.h  Simulation.h
App/src/CellularAutomata/Simulations/: GameOfLife.cpp  GameOfLife.h  Rule30.cpp  Rule30.h  RuleN.cpp  RuleN.h  SmoothLife.cpp  SmoothLife.h
Autm/: CMakeLists.txt
Autm/src/: Autm.h  autmpch.cpp  autmpch.h
Autm/src/App/: Application.cpp  Application.h
Autm/src/Core/: Assert.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  ThreadPool.cpp  ThreadPool.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Autm/src/Event/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Autm/src/Imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Autm/src/Physics/: Edge.cpp  Edge.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  Vertex.cpp  Vertex.h
Autm/src/Renderer/: Buffer.h  ComputeShader.cpp  ComputeShader.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderSystem.cpp  RenderSystem.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Autm/src/Scene/: Components.h  Entity.cpp  Entity.h  EntityContactListener.cpp  EntityContactListener.h  Scene.cpp  Scene.h
Autm/src/Util/: Coordinate.h  (+4 more)
assets/shaders/: CustomFrag.glsl  CustomVert.glsl  FlatColorFragment.glsl  FlatColorVertex.glsl  FractalFragment.glsl  FractalVertex.glsl  RayMarchFragment.glsl  RayMarchVertex.glsl  SlimeMoldComputeShader.glsl  TextureFragment.glsl  TextureVertex.glsl  TexturedQuadFragment.glsl  TexturedQuadVertex.glsl  fragment.glsl  vertex.glsl
src/: autmpch.h  main.cpp
src/App/: Application.cpp  Application.h
src/Core/: Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Window.cpp  Window.h
src/Renderer/: Buffer.h  ComputeShader.cpp  ComputeShader.h  IndexBuffer.h  OpenGLContext.cpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderSystem.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.h
(+22 files in other folders)
